# gpsoauth-compat

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
gpsoauth_compat/: __init__.py  credentials.py  flow.py
